apps/manifests/ingress/gitea-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    argocd.argoproj.io/external-uri: http://gitea.localtest.me:30080
spec:
  ingressClassName: nginx
  rules:
  - host: gitea.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
