apps/manifests/ingress/podinfo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: podinfo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    argocd.argoproj.io/external-uri: http://localhost:30080/podinfo
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /podinfo
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 80
